CU-3gb3ydd Implement RefreshToken controller
