# openapi.yaml
@@ -29,6 +29,36 @@ paths:
           $ref: '#/components/responses/400'
         '500':
           $ref: '#components/responses/500'
+  /token/refresh:
+    post:
+      description: Refresh access token
+      parameters:
+        - in: header
+          name: "Authorization"
+          schema:
+            type: string
+            example: "Bearer eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpc3MiOiJodHRwOi8vbG9jYWxob3N0OjgwMDAvYXBpL2F1dGgvbG9naW4iLCJpYXQiOjE2NjE3ODQ2ODAsImV4cCI6MTY2MTc4ODI4MCwibmJmIjoxNjYxNzg0NjgwLCJqdGkiOiJzNTQyc0FDNW5MUlg3SURSIiwic3ViIjoiTjlwQm5Ud1lock45dEhKUHJnRHZzYiIsInBydiI6Ijc4YTA0Zjg0YzY1ZTE5Y2VkOWUwNTliOThhNGZhNWQxMGIxYzNiMzUifQ.cP8GIRFgrPHvV7VfI_Vaw4QpIvPeTfIwNXRC4mB8224"
+      responses:
+        '200':
+          description: Successfully access token refreshed
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  response:
+                    type: object
+                    properties:
+                      access_token:
+                        type: string
+                        example: "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpc3MiOiJodHRwOi8vbG9jYWxob3N0OjgwMDAvYXBpL2F1dGgvbG9naW4iLCJpYXQiOjE2NjE4ODkwOTQsImV4cCI6MTY2MTg5MjY5NCwibmJmIjoxNjYxODg5MDk0LCJqdGkiOiJ2N2JvNkQ3aFVNNGZ6bUxIIiwic3ViIjoiTjlwQm5Ud1lock45dEhKUHJnRHZzYiIsInBydiI6Ijc4YTA0Zjg0YzY1ZTE5Y2VkOWUwNTliOThhNGZhNWQxMGIxYzNiMzUifQ.OZlHByjBTAm"
+                  status:
+                    type: number
+                    example: 200
+        '401':
+          $ref: '#/components/responses/401'
+        '500':
+          $ref: '#components/responses/500'
   /register:
     post:
       tags:
@@ -216,6 +246,19 @@ components:
               status:
                 type: number
                 example: 400
+    401:
+      description: Unauthorized request
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              response:
+                type: string
+                example: "You don't have enough permissions"
+              status:
+                type: number
+                example: 401
     403:
       description: Forbidden request
       content:
