# src/Core/Infrastructure/Http/Api/Controllers/RefreshTokenController.php
@@ -1,0 +1,63 @@
+<?php declare(strict_types = 1);
+
+namespace Beagle\Core\Infrastructure\Http\Api\Controllers;
+
+use Beagle\Core\Application\Command\User\RefreshToken\RefreshTokenCommand;
+use Beagle\Core\Domain\PersonalToken\Errors\InvalidPersonalAccessToken;
+use Beagle\Core\Domain\PersonalToken\Errors\PersonalAccessTokenNotFound;
+use Beagle\Core\Domain\PersonalToken\PersonalAccessTokenRepository;
+use Beagle\Core\Domain\User\Errors\UserNotFound;
+use Beagle\Core\Domain\User\ValueObjects\UserId;
+use Beagle\Shared\Bus\CommandBus;
+use Beagle\Shared\Bus\QueryBus;
+use Beagle\Shared\Domain\ValueObjects\Guid;
+use Beagle\Shared\Infrastructure\Http\Api\Controllers\BaseController;
+use Illuminate\Http\JsonResponse;
+use Illuminate\Http\Request;
+use ReallySimpleJWT\Token;
+
+final class RefreshTokenController extends BaseController
+{
+    public function __construct(
+        protected CommandBus $commandBus,
+        protected QueryBus $queryBus,
+        private PersonalAccessTokenRepository $personalAccessTokenRepository
+    ) {
+        parent::__construct($this->commandBus, $this->queryBus);
+    }
+
+    /**
+     * @throws PersonalAccessTokenNotFound
+     * @throws InvalidPersonalAccessToken
+     */
+    public function execute(Request $request):JsonResponse
+    {
+        try {
+            $token = $this->tokenFromHeaderAsString($request->header('authorization'));
+            $userIdAsString = Token::getPayload($token)['uid'];
+            $userId = UserId::fromString($userIdAsString);
+
+            $this->commandBus->dispatch(
+                new RefreshTokenCommand(
+                    $userId->value(),
+                    Guid::v4()->toBase58()
+                )
+            );
+
+            $personalAccessToken = $this->personalAccessTokenRepository->findByUserId($userId);
+
+            return $this->generateSuccessfulResponse(
+                [
+                    "access_token" => $personalAccessToken->token()->value()
+                ]
+            );
+        } catch (UserNotFound $notFound) {
+            return $this->generateNotFoundResponse($notFound->getMessage());
+        }
+    }
+
+    private function tokenFromHeaderAsString(string $header):string
+    {
+        return \explode(" ", $header)[1];
+    }
+}
